--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -113,7 +113,9 @@
 							<span>Pray copy Bob in measure and attendance.</span>
 						</p>
 					</blockquote>
-					<p><a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-18" epub:type="se:referrer">↩</a></p>
+					<p>
+						<a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-18" epub:type="se:referrer">↩</a>
+					</p>
 				</li>
 				<li id="note-19" epub:type="rearnote">
 					<p>“Thou didst swear to me upon a parcel-gilt goblet, sitting in my Dolphin chamber, at the round table, by a sea-coal fire, on Wednesday, in <span epub:type="z3998:event">Whitsunweek</span>, when the prince broke thy head for likening his father to a singing man at <span epub:type="z3998:place">Windsor</span>; thou didst swear to me then, as I was washing thy wound, to marry me, and make me my lady, thy wife. Canst thou deny it?”⁠—<cite>Henry <span epub:type="z3998:roman">IV</span>, Part 2</cite>. <a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-19" epub:type="se:referrer">↩</a></p>
@@ -156,7 +158,9 @@
 						</p>
 						<p><cite>Churchyard</cite>.</p>
 					</blockquote>
-					<p><a href="../text/the-mutability-of-literature.xhtml#noteref-23" epub:type="se:referrer">↩</a></p>
+					<p>
+						<a href="../text/the-mutability-of-literature.xhtml#noteref-23" epub:type="se:referrer">↩</a>
+					</p>
 				</li>
 				<li id="note-24" epub:type="rearnote">
 					<p>The erudite reader, well versed in good-for-nothing lore, will perceive that the above Tale must have been suggested to the old <span epub:type="z3998:nationality">Swiss</span> by a little French anecdote, a circumstance said to have taken place in <span epub:type="z3998:place">Paris</span>. <a href="../text/the-spectre-bridegroom.xhtml#noteref-24" epub:type="se:referrer">↩</a></p>
@@ -192,7 +196,9 @@
 							<span>Crack nuts and cry ule!”</span>
 						</p>
 					</blockquote>
-					<p><a href="../text/christmas-day.xhtml#noteref-32" epub:type="se:referrer">↩</a></p>
+					<p>
+						<a href="../text/christmas-day.xhtml#noteref-32" epub:type="se:referrer">↩</a>
+					</p>
 				</li>
 				<li id="note-33" epub:type="rearnote">
 					<p>“An <span epub:type="z3998:nationality">English</span> gentleman, at the opening of the great day⁠—<abbr>i.e.</abbr> on <span epub:type="z3998:event">Christmas</span> day in the morning⁠—had all his tenants and neighbors enter his hall by daybreak. The strong beer was broached, and the blackjacks went plentifully about, with toast, sugar and nutmeg, and good Cheshire cheese. The Hackin (the great sausage) must be boiled by daybreak, or else two young men must take the maiden (<abbr>i.e.</abbr> the cook) by the arms and run her round the marketplace till she is shamed of her laziness.”⁠—Round about our Sea-Coal Fire. <a href="../text/christmas-day.xhtml#noteref-33" epub:type="se:referrer">↩</a></p>
@@ -241,7 +247,9 @@
 							<span class="i7"><abbr>etc.</abbr>, <abbr>etc.</abbr>, <abbr class="eoc">etc.</abbr></span>
 						</p>
 					</blockquote>
-					<p><a href="../text/the-christmas-dinner.xhtml#noteref-35" epub:type="se:referrer">↩</a></p>
+					<p>
+						<a href="../text/the-christmas-dinner.xhtml#noteref-35" epub:type="se:referrer">↩</a>
+					</p>
 				</li>
 				<li id="note-36" epub:type="rearnote">
 					<p>The peacock was anciently in great demand for stately entertainments. Sometimes it was made into a pie, at one end of which the head appeared above the crust in all its plumage, with the beak richly gilt; at the other end the tail was displayed. Such pies were served up at the solemn banquets of chivalry, when knights-errant pledged themselves to undertake any perilous enterprise, whence came the ancient oath, used by Justice Shallow, “by cock and pie.”</p>
@@ -255,7 +263,9 @@
 							<span>Their pheasants drench’d with ambergris: <em>the carcases of three fat wethers bruised for gravy to make sauce for a single peacock.</em></span>
 						</p>
 					</blockquote>
-					<p><a href="../text/the-christmas-dinner.xhtml#noteref-36" epub:type="se:referrer">↩</a></p>
+					<p>
+						<a href="../text/the-christmas-dinner.xhtml#noteref-36" epub:type="se:referrer">↩</a>
+					</p>
 				</li>
 				<li id="note-37" epub:type="rearnote">
 					<p>The Wassail Bowl was sometimes composed of ale instead of wine, with nutmeg, sugar, toast, ginger, and roasted crabs; in this way the nut-brown beverage is still prepared in some old families and round the hearths of substantial farmers at <span epub:type="z3998:event">Christmas</span>. It is also called Lamb’s Wool, and is celebrated by Herrick in his “<span epub:type="se:name.publication.poem">Twelfth Night</span>”:</p>
@@ -274,7 +284,9 @@
 							<span>To make the Wassaile a swinger.</span>
 						</p>
 					</blockquote>
-					<p><a href="../text/the-christmas-dinner.xhtml#noteref-37" epub:type="se:referrer">↩</a></p>
+					<p>
+						<a href="../text/the-christmas-dinner.xhtml#noteref-37" epub:type="se:referrer">↩</a>
+					</p>
 				</li>
 				<li id="note-38" epub:type="rearnote">
 					<p>“The custom of drinking out of the same cup gave place to each having his cup. When the steward came to the doore with the Wassel, he was to cry three times, Wassel, Wassel, Wassel, and then the chappell (chaplain) was to answer with a song.”⁠—<cite>Archaeologia</cite>. <a href="../text/the-christmas-dinner.xhtml#noteref-38" epub:type="se:referrer">↩</a></p>
@@ -383,7 +395,9 @@
 							<span>Backe and syde go bare, go bare, <abbr class="eoc">etc.</abbr></span>
 						</p>
 					</blockquote>
-					<p><a href="../text/little-britain.xhtml#noteref-45" epub:type="se:referrer">↩</a></p>
+					<p>
+						<a href="../text/little-britain.xhtml#noteref-45" epub:type="se:referrer">↩</a>
+					</p>
 				</li>
 				<li id="note-46" epub:type="rearnote">
 					<p>The following is the only stanza extant of this lampoon:⁠—</p>
@@ -408,7 +422,9 @@
 							<span>Then sing lowsie Lucy whatever befall it.</span>
 						</p>
 					</blockquote>
-					<p><a href="../text/stratford-on-avon.xhtml#noteref-46" epub:type="se:referrer">↩</a></p>
+					<p>
+						<a href="../text/stratford-on-avon.xhtml#noteref-46" epub:type="se:referrer">↩</a>
+					</p>
 				</li>
 				<li id="note-47" epub:type="rearnote">
 					<p>The luce is a pike or jack, and abounds in the Avon about Charlecot. <a href="../text/stratford-on-avon.xhtml#noteref-47" epub:type="se:referrer">↩</a></p>
