Fix typo in ToC

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -153,7 +153,7 @@
 					<a href="text/preface.xhtml" epub:type="frontmatter z3998:fiction preface">Preface to the Revised Edition</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Tile</a>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter z3998:fiction">The Sketch-Book of Goeffrey Crayon, Gent.</a>
