--- a/src/epub/text/stratford-on-avon.xhtml
+++ b/src/epub/text/stratford-on-avon.xhtml
@@ -102,11 +102,11 @@
 			</blockquote>
 			<p>I had now come in sight of the house. It is a large building of brick with stone quoins, and is in the Gothic style of Queen Elizabeth’s day, having been built in the first year of her reign. The exterior remains very nearly in its original state, and may be considered a fair specimen of the residence of a wealthy country gentleman of those days. A great gateway opens from the park into a kind of courtyard in front of the house, ornamented with a grassplot, shrubs, and flowerbeds. The gateway is in imitation of the ancient barbacan, being a kind of outpost and flanked by towers, though evidently for mere ornament, instead of defence. The front of the house is completely in the old style with stone-shafted casements, a great bow-window of heavy stonework, and a portal with armorial bearings over it carved in stone. At each corner of the building is an octagon tower surmounted by a gilt ball and weathercock.</p>
 			<p>The Avon, which winds through the park, makes a bend just at the foot of a gently-sloping bank which sweeps down from the rear of the house. Large herds of deer were feeding or reposing upon its borders, and swans were sailing majestically upon its bosom. As I contemplated the venerable old mansion I called to mind Falstaff’s encomium on Justice Shallow’s abode, and the affected indifference and real vanity of the latter:</p>
-			<table>
+			<table epub:type="z3998:drama">
 				<tbody>
 					<tr>
 						<td epub:type="z3998:persona">
-							<p>“Falstaff</p>
+							<p>Falstaff</p>
 						</td>
 						<td>
 							<p>You have a goodly dwelling and a rich.</p>
@@ -117,18 +117,18 @@
 							<p>Shallow</p>
 						</td>
 						<td>
-							<p>Barren, barren, barren; beggars all, beggars all, Sir John:⁠—marry, good air.”</p>
+							<p>Barren, barren, barren; beggars all, beggars all, Sir John:⁠—marry, good air.</p>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 			<p>Whatever may have been the joviality of the old mansion in the days of Shakespeare, it had now an air of stillness and solitude. The great iron gateway that opened into the courtyard was locked, there was no show of servants bustling about the place; the deer gazed quietly at me as I passed, being no longer harried by the moss-troopers of <span epub:type="z3998:place">Stratford</span>. The only sign of domestic life that I met with was a white cat stealing with wary look and stealthy pace towards the stables, as if on some nefarious expedition. I must not omit to mention the carcass of a scoundrel crow which I saw suspended against the barn-wall, as it shows that the Lucys still inherit that lordly abhorrence of poachers and maintain that rigorous exercise of territorial power which was so strenuously manifested in the case of the bard.</p>
 			<p>After prowling about for some time, I at length found my way to a lateral portal, which was the everyday entrance to the mansion. I was courteously received by a worthy old housekeeper, who, with the civility and communicativeness of her order, showed me the interior of the house. The greater part has undergone alterations and been adapted to modern tastes and modes of living: there is a fine old oaken staircase, and the great hall, that noble feature in an ancient manor-house, still retains much of the appearance it must have had in the days of Shakespeare. The ceiling is arched and lofty, and at one end is a gallery in which stands an organ. The weapons and trophies of the chase, which formerly adorned the hall of a country gentleman, have made way for family portraits. There is a wide, hospitable fireplace, calculated for an ample old-fashioned wood fire, formerly the rallying-place of winter festivity. On the opposite side of the hall is the huge Gothic bow-window, with stone shafts, which looks out upon the courtyard. Here are emblazoned in stained glass the armorial bearings of the Lucy family for many generations, some being dated in 1558. I was delighted to observe in the quarterings the three white luces by which the character of Sir Thomas was first identified with that of Justice Shallow. They are mentioned in the first scene of the <i epub:type="se:name.publication.play">Merry Wives of Windsor</i>, where the justice, is in a rage with Falstaff for having “beaten his men, killed his deer, and broken into his lodge.” The poet had no doubt the offences of himself and his comrades in mind at the time, and we may suppose the family pride and vindictive threats of the puissant Shallow to be a caricature of the pompous indignation of Sir Thomas.</p>
-			<table>
+			<table epub:type="z3998:drama">
 				<tbody>
 					<tr>
 						<td epub:type="z3998:persona">
-							<p>“Shallow</p>
+							<p>Shallow</p>
 						</td>
 						<td>
 							<p>Sir Hugh, persuade me not: I will make a Star Chamber matter of it; if he were twenty John Falstaffs, he shall not abuse Sir Robert Shallow, <abbr class="eoc">Esq.</abbr></p>
@@ -200,7 +200,7 @@
 							<p>Shallow</p>
 						</td>
 						<td>
-							<p>Ha! o’ my life, if I were young again, the sword should end it!”</p>
+							<p>Ha! o’ my life, if I were young again, the sword should end it!</p>
 						</td>
 					</tr>
 				</tbody>
