Add poetry elision style

--- a/src/epub/text/christmas-day.xhtml
+++ b/src/epub/text/christmas-day.xhtml
@@ -17,7 +17,7 @@
 						<br/>
 						<span>That sees December turn’d to May.</span>
 						<br/>
-						<span>* * * * * * *</span>
+						<span class="elision">⋮</span>
 						<br/>
 						<span>Why does the chilling winter’s morne</span>
 						<br/>
