--- a/src/epub/text/rural-funerals.xhtml
+++ b/src/epub/text/rural-funerals.xhtml
@@ -162,7 +162,7 @@
 					<br/>
 					<span>From out thy maiden monument.</span>
 					<br/>
-					<span>* * * * * * *</span>
+					<span class="elision">⋮</span>
 					<br/>
 					<span>May all shie maids at wonted hours</span>
 					<br/>
