Fix typos and add semantics

--- a/src/epub/text/english-writers-on-america.xhtml
+++ b/src/epub/text/english-writers-on-america.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title"><span epub:type="z3998:nationality">English</span> Writers on <span epub:type="z3998:place">America</span></h2>
 				<blockquote epub:type="epigraph">
 					<p>“Methinks I see in my mind a noble and puissant nation, rousting herself like a strong man after sleep, and shaking her invincible locks; methinks I see her as an eagle, mewing her mighty youth, and kindling her endazzled eyes at the full midday beam.”</p>
-					<cite>Milton on the Liberty of the Press</cite>
+					<cite>Milton on the liberty of the Press</cite>
 				</blockquote>
 			</header>
 			<p>It is with feelings of deep regret that I observe the literary animosity daily growing up between <span epub:type="z3998:place">England</span> and <span epub:type="z3998:place">America</span>. Great curiosity has been awakened of late with respect to the <span epub:type="z3998:place">United States</span>, and the <span epub:type="z3998:place">London</span> press has teemed with volumes of travels through the Republic; but they seem intended to diffuse error rather than knowledge; and so successful have they been, that, notwithstanding the constant intercourse between the nations, there is no people concerning whom the great mass of the <span epub:type="z3998:nationality">British</span> public have less pure information, or entertain more numerous prejudices.</p>
