Convert some bridgeheads to subtitles

--- a/src/epub/text/rip-van-winkle.xhtml
+++ b/src/epub/text/rip-van-winkle.xhtml
@@ -8,8 +8,10 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="rip-van-winkle" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title">Rip Van Winkle</h2>
-				<p epub:type="bridgehead">A posthumous writing of Diedrich Knickerbocker.</p>
+				<h2 epub:type="title">
+					<span>Rip Van Winkle</span>
+					<span epub:type="subtitle">A posthumous writing of Diedrich Knickerbocker</span>
+				</h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>By Woden, God of Saxons,</span>
