--- a/src/epub/text/the-boars-head-tavern-eastcheap.xhtml
+++ b/src/epub/text/the-boars-head-tavern-eastcheap.xhtml
@@ -8,8 +8,10 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="the-boars-head-tavern-eastcheap" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title">The Boar’s Head Tavern, Eastcheap</h2>
-				<p epub:type="bridgehead">A Shakespearian research.</p>
+				<h2 epub:type="title">
+					<span>The Boar’s Head Tavern, Eastcheap</span>
+					<span epub:type="subtitle">A Shakespearian research</span>
+				</h2>
 				<blockquote epub:type="epigraph">
 					<p>“A tavern is the rendezvous, the exchange, the staple of good fellows. I have heard my great-grandfather tell, how his great-great-grandfather should say, that it was an old proverb when his great-grandfather was a child, that ‘it was a good wind that blew a man to the wine.’ ”</p>
 					<cite>Mother Bombie</cite>
