--- a/src/epub/text/the-legend-of-sleepy-hollow.xhtml
+++ b/src/epub/text/the-legend-of-sleepy-hollow.xhtml
@@ -9,7 +9,7 @@
 		<section id="the-legend-of-sleepy-hollow" epub:type="volume se:short-story">
 			<header>
 				<h2 epub:type="title">The Legend of <span epub:type="z3998:place">Sleepy Hollow</span></h2>
-				<p epub:type="bridgehead">Found Among the Papers of the Late Diedrich Knickerbocker.</p>
+				<p epub:type="bridgehead">Found among the papers of the late Diedrich Knickerbocker.</p>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>A pleasing land of drowsy-head it was,</span>
