--- a/src/epub/text/the-mutability-of-literature.xhtml
+++ b/src/epub/text/the-mutability-of-literature.xhtml
@@ -8,8 +8,10 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="the-mutability-of-literature" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title">The Mutability of Literature</h2>
-				<p epub:type="bridgehead">A Colloquy in Westminster Abbey.</p>
+				<h2 epub:type="title">
+					<span>The Mutability of Literature</span>
+					<span epub:type="subtitle">A Colloquy in Westminster Abbey</span>
+				</h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span class="i1">I know that all beneath the moon decays,</span>
