--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -156,7 +156,9 @@
 							<br/>
 							<span class="i1">As farre as dross doth lead.</span>
 						</p>
-						<p><cite>Churchyard</cite></p>
+						<p>
+							<cite>Churchyard</cite>
+						</p>
 					</blockquote>
 					<p>
 						<a href="../text/the-mutability-of-literature.xhtml#noteref-23" epub:type="se:referrer">↩</a>
