--- a/src/epub/text/the-spectre-bridegroom.xhtml
+++ b/src/epub/text/the-spectre-bridegroom.xhtml
@@ -22,7 +22,9 @@
 						<br/>
 						<span>This night Gray-Steel has made his bed.</span>
 					</p>
-					<cite><i epub:type="se:name.publication.book">Sir Eger, Sir Grahame, and Sir Gray-Steel</i></cite>
+					<cite>
+						<i epub:type="se:name.publication.book">Sir Eger, Sir Grahame, and Sir Gray-Steel</i>
+					</cite>
 				</blockquote>
 			</header>
 			<p>On the summit of one of the heights of the Odenwald, a wild and romantic tract of <span epub:type="z3998:place">Upper Germany</span> that lies not far from the confluence of the Main and the Rhine, there stood many, many years since the castle of the Baron Von Landshort. It is now quite fallen to decay, and almost buried among beech trees and dark firs; above which, however, its old watchtower may still be seen struggling, like the former possessor I have mentioned, to carry a high head and look down upon the neighboring country.</p>
