Correct quotes and italics in epigraph sources

--- a/src/epub/text/christmas.xhtml
+++ b/src/epub/text/christmas.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title z3998:event">Christmas</h2>
 				<blockquote epub:type="epigraph">
 					<p>But is old, old, good old <span epub:type="z3998:event">Christmas</span> gone? Nothing but the hair of his good, gray old head and beard left? Well, I will have that, seeing I cannot have more of him.</p>
-					<cite>Hue and Cry After Christmas</cite>
+					<cite>“Hue and Cry After Christmas”</cite>
 				</blockquote>
 				<blockquote epub:type="epigraph z3998:song">
 					<p>
