--- a/src/epub/text/lenvoy.xhtml
+++ b/src/epub/text/lenvoy.xhtml
@@ -21,7 +21,7 @@
 						<br/>
 						<span>Thee to correct in any part or all.</span>
 					</p>
-					<cite>Alain Chartier’s Belle Dame sans Mercie</cite>
+					<cite>Alain Chartier’s <i epub:type="se:name.publication.poem">Belle Dame sans Mercie</i></cite>
 				</blockquote>
 			</header>
 			<p>In concluding a second volume of the <i epub:type="se:name.publication.book">Sketch-Book</i>, the Author cannot but express his deep sense of the indulgence with which his first has been received, and of the liberal disposition that has been evinced to treat him with kindness as a stranger. Even the critics, whatever may be said of them by others, he has found to be a singularly gentle and good-natured race; it is true that each has in turn objected to someone or two articles, and that these individual exceptions, taken in the aggregate, would amount almost to a total condemnation of his work; but then he has been consoled by observing that what one has particularly censured another has as particularly praised; and thus, the encomiums being set off against the objections, he finds his work, upon the whole, commended far beyond its deserts.</p>
