--- a/src/epub/text/the-legend-of-sleepy-hollow.xhtml
+++ b/src/epub/text/the-legend-of-sleepy-hollow.xhtml
@@ -20,7 +20,9 @@
 						<br/>
 						<span class="i1">Forever flushing round a summer sky.</span>
 					</p>
-					<cite>Castle of Indolence</cite>
+					<cite>
+						<i epub:type="se:name.publication.poem">Castle of Indolence</i>
+					</cite>
 				</blockquote>
 			</header>
 			<p>In the bosom of one of those spacious coves which indent the eastern shore of the Hudson, at that broad expansion of the river denominated by the ancient <span epub:type="z3998:nationality">Dutch</span> navigators the Tappan Zee, and where they always prudently shortened sail and implored the protection of <abbr>St.</abbr> Nicholas when they crossed, there lies a small market-town or rural port which by some is called <span epub:type="z3998:place">Greensburg</span>, but which is more generally and properly known by the name of <span epub:type="z3998:place">Tarry Town</span>. This name was given, we are told, in former days by the good housewives of the adjacent country from the inveterate propensity of their husbands to linger about the village tavern on market days. Be that as it may, I do not vouch for the fact, but merely advert to it for the sake of being precise and authentic. Not far from this village, perhaps about two miles, there is a little valley, or rather lap of land, among high hills, which is one of the quietest places in the whole world. A small brook glides through it, with just murmur enough to lull one to repose, and the occasional whistle of a quail or tapping of a woodpecker is almost the only sound that ever breaks in upon the uniform tranquillity.</p>
