--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -218,11 +218,11 @@
 							<br/>
 							<span>And I pray you, my masters, be merry</span>
 							<br/>
-							<span class="i1">Quot estis in convivio.</span>
+							<span class="i1"><i xml:lang="la">Quot estis in convivio.</i></span>
 							<br/>
-							<span class="i2">Caput apri defero,</span>
+							<span class="i2"><i xml:lang="la">Caput apri defero,</i></span>
 							<br/>
-							<span class="i2">Reddens laudes domino.</span>
+							<span class="i2"><i xml:lang="la">Reddens laudes domino.</i></span>
 						</p>
 						<p>
 							<span>The boar’s head, as I understand,</span>
@@ -231,9 +231,9 @@
 							<br/>
 							<span>Which thus bedeck’d with a gay garland</span>
 							<br/>
-							<span class="i1">Let us servire cantico.</span>
+							<span class="i1">Let us <i xml:lang="la">servire cantico</i>.</span>
 							<br/>
-							<span class="i2">Caput apri defero, <abbr class="eoc">etc.</abbr></span>
+							<span class="i2"><i xml:lang="la">Caput apri defero,</i> <abbr class="eoc">etc.</abbr></span>
 						</p>
 						<p>
 							<span>Our steward hath provided this</span>
@@ -242,9 +242,9 @@
 							<br/>
 							<span>Which on this day to be served is</span>
 							<br/>
-							<span class="i1">In Reginensi Atrio.</span>
+							<span class="i1"><i xml:lang="la">In Reginensi Atrio.</i></span>
 							<br/>
-							<span class="i2">Caput apri defero,</span>
+							<span class="i2"><i xml:lang="la">Caput apri defero,</i></span>
 							<br/>
 							<span class="i7"><abbr>etc.</abbr>, <abbr>etc.</abbr>, <abbr class="eoc">etc.</abbr></span>
 						</p>
@@ -297,7 +297,7 @@
 					<p>From <i epub:type="se:name.publication.book">Poor Robin’s Almanack</i>. <a href="../text/the-christmas-dinner.xhtml#noteref-39" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-40" epub:type="rearnote">
-					<p>At <span epub:type="z3998:event">Christmasse</span> there was in the Kinges house, wheresoever hee was lodged, a lorde of misrule or mayster of merie disportes, and the like had ye in the house of every nobleman of honor, or good worshipper were he spirituall or temporall. <cite>—Stowe.</cite> <a href="../text/the-christmas-dinner.xhtml#noteref-40" epub:type="se:referrer">↩</a></p>
+					<p>“At <span epub:type="z3998:event">Christmasse</span> there was in the Kinges house, wheresoever hee was lodged, a lorde of misrule or mayster of merie disportes, and the like had ye in the house of every nobleman of honor, or good worshipper were he spirituall or temporall.” <cite>—Stowe.</cite> <a href="../text/the-christmas-dinner.xhtml#noteref-40" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-41" epub:type="rearnote">
 					<p>Maskings or mummeries were favorite sports at <span epub:type="z3998:event">Christmas</span> in old times, and the wardrobes at halls and manor-houses were often laid under contribution to furnish dresses and fantastic disguisings. I strongly suspect Master Simon to have taken the idea of his from Ben Jonson’s <i epub:type="se:name.publication.play">Masque of Christmas</i>. <a href="../text/the-christmas-dinner.xhtml#noteref-41" epub:type="se:referrer">↩</a></p>
