--- a/src/epub/text/little-britain.xhtml
+++ b/src/epub/text/little-britain.xhtml
@@ -10,10 +10,8 @@
 			<header>
 				<h2 epub:type="title">Little Britain</h2>
 				<blockquote epub:type="epigraph">
-					<p>What I write is most true</p>
-					<hr/>
-					<p>I have a whole booke of cases lying by me, which if I should sette foorth, some grave auntients (within the hearing of Bow Bell) would be out of charity with me.</p>
-					<cite>Nash</cite>
+					<p>What I write is most true ... I have a whole booke of cases lying by me, which if I should sette foorth, some grave auntients (within the hearing of Bow Bell) would be out of charity with me.</p>
+					<cite>Nashe</cite>
 				</blockquote>
 			</header>
 			<p>In the centre of the great city of <span epub:type="z3998:place">London</span> lies a small neighborhood, consisting of a cluster of narrow streets and courts, of very venerable and debilitated houses, which goes by the name of <b>Little Britain</b>. Christ Church School and <abbr>St.</abbr> Bartholomew’s Hospital bound it on the west; <span epub:type="z3998:place">Smithfield</span> and Long Lane on the north; Aldersgate Street, like an arm of the sea, divides it from the eastern part of the city; whilst the yawning gulf of Bull-and-Mouth Street separates it from Butcher Lane and the regions of Newgate. Over this little territory, thus bounded and designated, the great dome of <abbr>St.</abbr> Paul’s, swelling above the intervening houses of Paternoster Row, Amen Corner, and Ave-Maria Lane, looks down with an air of motherly protection.</p>
