--- a/src/epub/text/the-christmas-dinner.xhtml
+++ b/src/epub/text/the-christmas-dinner.xhtml
@@ -59,9 +59,9 @@
 			<p>The parson said grace, which was not a short familiar one, such as is commonly addressed to the Deity in these unceremonious days, but a long, courtly, well-worded one of the ancient school. There was now a pause, as if something was expected, when suddenly the butler entered the hall with some degree of bustle: he was attended by a servant on each side with a large wax-light, and bore a silver dish on which was an enormous pig’s head decorated with rosemary, with a lemon in its mouth, which was placed with great formality at the head of the table. The moment this pageant made its appearance the harper struck up a flourish; at the conclusion of which the young Oxonian, on receiving a hint from the squire, gave, with an air of the most comic gravity, an old carol, the first verse of which was as follows</p>
 			<blockquote epub:type="z3998:song">
 				<p>
-					<span class="i1">Caput apri defero</span>
+					<span class="i1"><i xml:lang="la">Caput apri defero</i></span>
 					<br/>
-					<span class="i1">Reddens laudes Domino,</span>
+					<span class="i1"><i xml:lang="la">Reddens laudes Domino,</i></span>
 					<br/>
 					<span>The boar’s head in hand bring I,</span>
 					<br/>
@@ -69,7 +69,7 @@
 					<br/>
 					<span>I pray you all synge merily</span>
 					<br/>
-					<span class="i1">Qui estis in convivio.</span>
+					<span class="i1"><i xml:lang="la">Qui estis in convivio.</i></span>
 				</p>
 			</blockquote>
 			<p>Though prepared to witness many of these little eccentricities, from being apprised of the peculiar hobby of mine host, yet I confess the parade with which so odd a dish was introduced somewhat perplexed me, until I gathered from the conversation of the squire and the parson that it was meant to represent the bringing in of the boar’s head, a dish formerly served up with much ceremony and the sound of minstrelsy and song, at great tables, on <span epub:type="z3998:event">Christmas</span> day. “I like the old custom,” said the squire, “not merely because it is stately and pleasing in itself, but because it was observed at the college at Oxford at which I was educated. When I hear the old song chanted it brings to mind the time when I was young and gamesome, and the noble old college hall, and my fellow-students loitering about in their black gowns; many of whom, poor lads! are now in their graves.”</p>
@@ -79,8 +79,8 @@
 			<p>It would be tedious, perhaps, to my wiser readers, who may not have that foolish fondness for odd and obsolete things to which I am a little given, were I to mention the other makeshifts or this worthy old humorist, by which he was endeavoring to follow up, though at humble distance, the quaint customs of antiquity. I was pleased, however, to see the respect shown to his whims by his children and relatives; who, indeed, entered readily into the full spirit of them, and seemed all well versed in their parts, having doubtless been present at many a rehearsal. I was amused, too, at the air of profound gravity with which the butler and other servants executed the duties assigned them, however eccentric. They had an old-fashioned look, having, for the most part, been brought up in the household and grown into keeping with the antiquated mansion and the humors of its lord, and most probably looked upon all his whimsical regulations as the established laws of honorable housekeeping.</p>
 			<p>When the cloth was removed the butler brought in a huge silver vessel of rare and curious workmanship, which he placed before the squire. Its appearance was hailed with acclamation, being the Wassail Bowl, so renowned in <span epub:type="z3998:event">Christmas</span> festivity. The contents had been prepared by the squire himself; for it was a beverage in the skilful mixture of which he particularly prided himself, alleging that it was too abstruse and complex for the comprehension of an ordinary servant. It was a potation, indeed, that might well make the heart of a toper leap within him, being composed of the richest and raciest wines, highly spiced and sweetened, with roasted apples bobbing about the surface.<a href="../text/endnotes.xhtml#note-37" id="noteref-37" epub:type="noteref">37</a></p>
 			<p>The old gentleman’s whole countenance beamed with a serene look of indwelling delight as he stirred this mighty bowl. Having raised it to his lips, with a hearty wish of a merry <span epub:type="z3998:event">Christmas</span> to all present, he sent it brimming round the board, for everyone to follow his example, according to the primitive style, pronouncing it “the ancient fountain of good feeling, where all hearts met together.”<a href="../text/endnotes.xhtml#note-38" id="noteref-38" epub:type="noteref">38</a></p>
-			<p>There was much laughing and rallying as the honest emblem of <span epub:type="z3998:event">Christmas</span> joviality circulated and was kissed rather coyly by the ladies. When it reached Master Simon, he raised it in both hands, and with the air of a boon companion struck up an old Wassail Chanson.</p>
-			<blockquote epub:type="z3998:verse">
+			<p>There was much laughing and rallying as the honest emblem of <span epub:type="z3998:event">Christmas</span> joviality circulated and was kissed rather coyly by the ladies. When it reached Master Simon, he raised it in both hands, and with the air of a boon companion struck up an old Wassail chanson.</p>
+			<blockquote epub:type="z3998:song">
 				<p>
 					<span>The brown bowle,</span>
 					<br/>
