--- a/src/epub/text/the-stage-coach.xhtml
+++ b/src/epub/text/the-stage-coach.xhtml
@@ -10,7 +10,7 @@
 			<header>
 				<h2 epub:type="title">The Stage Coach</h2>
 				<blockquote epub:type="epigraph z3998:song">
-					<p>
+					<p xml:lang="la">
 						<span class="i1">Omne bené</span>
 						<br/>
 						<span class="i1">Sine pœnâ</span>
