--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -218,11 +218,17 @@
 							<br/>
 							<span>And I pray you, my masters, be merry</span>
 							<br/>
-							<span class="i1"><i xml:lang="la">Quot estis in convivio.</i></span>
+							<span class="i1">
+								<i xml:lang="la">Quot estis in convivio.</i>
+							</span>
 							<br/>
-							<span class="i2"><i xml:lang="la">Caput apri defero,</i></span>
+							<span class="i2">
+								<i xml:lang="la">Caput apri defero,</i>
+							</span>
 							<br/>
-							<span class="i2"><i xml:lang="la">Reddens laudes domino.</i></span>
+							<span class="i2">
+								<i xml:lang="la">Reddens laudes domino.</i>
+							</span>
 						</p>
 						<p>
 							<span>The boar’s head, as I understand,</span>
@@ -233,7 +239,10 @@
 							<br/>
 							<span class="i1">Let us <i xml:lang="la">servire cantico</i>.</span>
 							<br/>
-							<span class="i2"><i xml:lang="la">Caput apri defero,</i> <abbr class="eoc">etc.</abbr></span>
+							<span class="i2">
+								<i xml:lang="la">Caput apri defero,</i>
+								<abbr class="eoc">etc.</abbr>
+							</span>
 						</p>
 						<p>
 							<span>Our steward hath provided this</span>
@@ -242,9 +251,13 @@
 							<br/>
 							<span>Which on this day to be served is</span>
 							<br/>
-							<span class="i1"><i xml:lang="la">In Reginensi Atrio.</i></span>
+							<span class="i1">
+								<i xml:lang="la">In Reginensi Atrio.</i>
+							</span>
 							<br/>
-							<span class="i2"><i xml:lang="la">Caput apri defero,</i></span>
+							<span class="i2">
+								<i xml:lang="la">Caput apri defero,</i>
+							</span>
 							<br/>
 							<span class="i7"><abbr>etc.</abbr>, <abbr>etc.</abbr>, <abbr class="eoc">etc.</abbr></span>
 						</p>
