--- a/src/epub/text/the-christmas-dinner.xhtml
+++ b/src/epub/text/the-christmas-dinner.xhtml
@@ -59,9 +59,13 @@
 			<p>The parson said grace, which was not a short familiar one, such as is commonly addressed to the Deity in these unceremonious days, but a long, courtly, well-worded one of the ancient school. There was now a pause, as if something was expected, when suddenly the butler entered the hall with some degree of bustle: he was attended by a servant on each side with a large wax-light, and bore a silver dish on which was an enormous pig’s head decorated with rosemary, with a lemon in its mouth, which was placed with great formality at the head of the table. The moment this pageant made its appearance the harper struck up a flourish; at the conclusion of which the young Oxonian, on receiving a hint from the squire, gave, with an air of the most comic gravity, an old carol, the first verse of which was as follows</p>
 			<blockquote epub:type="z3998:song">
 				<p>
-					<span class="i1"><i xml:lang="la">Caput apri defero</i></span>
+					<span class="i1">
+						<i xml:lang="la">Caput apri defero</i>
+					</span>
 					<br/>
-					<span class="i1"><i xml:lang="la">Reddens laudes Domino,</i></span>
+					<span class="i1">
+						<i xml:lang="la">Reddens laudes Domino,</i>
+					</span>
 					<br/>
 					<span>The boar’s head in hand bring I,</span>
 					<br/>
@@ -69,7 +73,9 @@
 					<br/>
 					<span>I pray you all synge merily</span>
 					<br/>
-					<span class="i1"><i xml:lang="la">Qui estis in convivio.</i></span>
+					<span class="i1">
+						<i xml:lang="la">Qui estis in convivio.</i>
+					</span>
 				</p>
 			</blockquote>
 			<p>Though prepared to witness many of these little eccentricities, from being apprised of the peculiar hobby of mine host, yet I confess the parade with which so odd a dish was introduced somewhat perplexed me, until I gathered from the conversation of the squire and the parson that it was meant to represent the bringing in of the boar’s head, a dish formerly served up with much ceremony and the sound of minstrelsy and song, at great tables, on <span epub:type="z3998:event">Christmas</span> day. “I like the old custom,” said the squire, “not merely because it is stately and pleasing in itself, but because it was observed at the college at Oxford at which I was educated. When I hear the old song chanted it brings to mind the time when I was young and gamesome, and the noble old college hall, and my fellow-students loitering about in their black gowns; many of whom, poor lads! are now in their graves.”</p>
