--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -450,13 +450,13 @@
 					<p>In the morning his companions awaked the bard, and proposed returning to <span epub:type="z3998:place">Bedford</span>, but he declined, saying he had enough, having drank with</p>
 					<blockquote>
 						<p>
-							<span>Piping Pebworth, Dancing Marston,</span>
+							<span>“Piping Pebworth, Dancing Marston,</span>
 							<br/>
 							<span>Haunted Hilbro’, Hungry Grafton,</span>
 							<br/>
 							<span>Dudging Exhall, Papist Wicksford,</span>
 							<br/>
-							<span>Beggarly Broom, and Drunken Bedford.</span>
+							<span>Beggarly Broom, and Drunken Bedford.”</span>
 						</p>
 					</blockquote>
 					<p>“The villages here alluded to,” says Ireland, “still bear the epithets thus given them: the people of <span epub:type="z3998:place">Pebworth</span> are still famed for their skill on the pipe and tabor; <span epub:type="z3998:place">Hilborough</span> is now called <span epub:type="z3998:place">Haunted Hilborough</span>; and <span epub:type="z3998:place">Grafton</span> is famous for the poverty of its soil.” <a href="../text/stratford-on-avon.xhtml#noteref-48" epub:type="se:referrer">↩</a></p>
